apps/base/tandoor/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tandoor
  labels:
    app.kubernetes.io/name: tandoor
    app.kubernetes.io/part-of: homelab-apps
