apps/base/tandoor/external-backend.yaml
# Proxy to prod Traefik (Docker Swarm) until in-cluster Tandoor is deployed.
apiVersion: v1
kind: Service
metadata:
  name: tandoor
  namespace: tandoor
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: tandoor
  namespace: tandoor
subsets:
  - addresses:
      - ip: 192.168.10.244
    ports:
      - name: http
        port: 80
        protocol: TCP
