apps/base/tandoor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tandoor
  namespace: tandoor
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Tandoor
    gethomepage.dev/description: Recipes
    gethomepage.dev/group: Medien
    gethomepage.dev/icon: tandoor-recipes.png
    gethomepage.dev/pod-selector: app=tandoor
    nginx.org/ssl-redirect: "false"
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rezepte.f4mily.net
      secretName: wildcard-f4mily-net-tls
  rules:
    - host: rezepte.f4mily.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tandoor
                port:
                  number: 80
